--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.0.4
   provider: ^6.0.1
   record: ^4.4.3
+  audioplayers: ^1.1.1
 
 dev_dependencies:
   flutter_test:
